# chat-server

./: README.md  chat-server.cabal  stack.yaml
app/: Main.hs
src/: Client.hs  Utils.hs
test/: simple_test_cases.txt
