name:                chat-server
version:             0.1.0.0
synopsis:            Multithreaded Chat Server
description:         Please see README.md
homepage:            https://github.com/HugoDelval/chat-server
license:             Copyleft
license-file:        LICENSE
author:              Hugo DELVAL
maintainer:          hugodelval@gmail.com
copyright:           2016 Hugo DELVAL
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Client, Utils
  build-depends:       base >= 4.7 && < 5, network, split, directory, iproute
  default-language:    Haskell2010

executable chat-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, network, parallel-io, split
                     , chat-server
  default-language:    Haskell2010

test-suite chat-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , multithreaded-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/HugoDelval/chat-server
